# pyprep

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  KICKOFF.md  LICENSE  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.impeccable/: design.json
alembic/: env.py  script.py.mako
alembic/versions/: 3cce3204a237_t3_1_initial_schema.py
content/: curriculum.md
content/interview_packs/: packs.json  template_v1.md
content/modules/01_python_core_oop/: 00_fundamentals.cards.json  00_fundamentals.md  01_class_architecture.cards.json  01_class_architecture.md  02_inheritance_exceptions.cards.json  02_inheritance_exceptions.md  03_dunder_methods.cards.json  03_dunder_methods.md  04_properties_decorators.cards.json  04_properties_decorators.md  05_memory_lazy_eval.cards.json  05_memory_lazy_eval.md  06_concurrency_gil.cards.json  06_concurrency_gil.md  module.md
content/modules/02_automation_scripting/: 00_time_dates_math.cards.json  00_time_dates_math.md  01_filesystem_os.cards.json  01_filesystem_os.md  02_text_regex.cards.json  02_text_regex.md  03_serialization.cards.json  03_serialization.md  04_network_apis.cards.json  04_network_apis.md  05_subprocess.cards.json  05_subprocess.md  06_production_scripts.cards.json  06_production_scripts.md  07_modern_backend.cards.json  07_modern_backend.md  module.md
content/modules/03_testing_qa/: 00_philosophy.cards.json  00_philosophy.md  01_pytest_basics.cards.json  03_fixtures.md  (+9 more)
content/schema/: card.schema.json  lesson.frontmatter.example.md
docs/: CLAUDE_CODE_INSTRUCTIONS.md  DEPLOY.md  NOTES.md  PLAN.md  PRD.md  PRD_code_sandbox.md  PRD_content_authoring.md  PRD_mock_interview_prompts.md  PRD_progress_tracking.md  PRD_spaced_repetition.md  TODO.md
frontend/: .env.example  cold-start.html  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pyodide-e2e.html  vite.config.ts
frontend/src/: App.tsx  cold-start-fixture.ts  index.css  index.css.test.ts  main.tsx  pyodide-e2e-fixture.ts
frontend/test/: cold-start.spec.ts  pyodide-e2e.spec.ts
scripts/: audit_handlers.py  check-bundle-size.mjs  check-contrast.mjs  check-em-dash.mjs  check-vite-env-coverage.mjs  check_file_size.py  check_router_coverage.py  validate_content.py
src/pyprep/: __init__.py  __main__.py  main.py
tests/integration/: conftest.py  test_alembic_migration.py  test_app_factory.py  test_app_static.py  test_auth_router.py  test_auth_single_user.py  test_config_router.py  test_deps_current_user.py  test_errors_and_logging.py  test_lifespan_migrations.py  test_log_hygiene.py  test_mock_router.py  test_modules_router.py  test_review_router.py  test_session_concurrency.py  test_sessions_router.py  test_stats_router.py
tests/unit/: test_audit_handlers.py  test_auth.py  test_cards.py  test_check_file_size.py  test_config.py  test_content_loader.py  test_gatekeeper.py  test_main.py  test_module1_allowlist_matrix.py  test_module1_code_tasks.py  test_mypy_config.py  test_prompts.py  test_pytest_harness.py  test_repos.py  test_scheduler.py  test_sdk_public_surface.py  test_sessions.py  test_smoke.py  test_stats.py  test_validate_content.py
(+196 files in other folders)
