[project]
name = "pyprep"
version = "1.00"
description = "Active recall + spaced repetition + in-browser code execution for Israeli junior Python interviews."
authors = [{ name = "Ilya Lazarev" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.5,<3",
    "email-validator>=2.2,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "python-jose[cryptography]>=3.3,<4",
    "bcrypt>=4,<6",
    "python-multipart>=0.0.20",
    "structlog>=24.4,<26",
    "fsrs>=6,<7",
    "jinja2>=3.1,<4",
    "jsonschema>=4.23,<5",
    "markdown-it-py>=3.0,<4",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<8",
    "pytest-asyncio>=0.24,<1",
    "hypothesis>=6.112,<7",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "freezegun>=1.5,<2",
    "respx>=0.21,<1",
    "pre-commit>=3.8,<5",
]

[project.scripts]
pyprep = "pyprep.main:main"
pyprep-api = "pyprep.api.app:run"
validate-content = "pyprep.tools.validate_content:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyprep"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src/pyprep",
    "--cov-report=term-missing",
    "--cov-report=html:coverage-report",
    "--cov-fail-under=85",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.coverage.run]
branch = true
source = ["src/pyprep"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["frontend", "content", "coverage-report", "alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # bugbear
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "T20",  # no print
    "ARG",  # unused arguments
    "PTH",  # use pathlib
    "S",    # security (bandit-style)
    "C4",   # comprehensions
    "TID",  # tidy imports
]
ignore = [
    "S101",  # asserts allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "ARG"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's `Depends`, `Query`, `Path`, etc. are explicitly designed to be
# called in default args — that's the dependency-injection idiom. Without
# this, B008 fires on every handler.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/pyprep/sdk", "src/pyprep/api"]
ignore_missing_imports = true
